--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -845,6 +845,7 @@
   "boilerplate.components.tables.codes.categoryName": "Category",
   "boilerplate.components.tables.codes.price": "Price",
   "boilerplate.components.tables.codes.transportaion": "Transportaion",
+  
 
   "boilerplate.containers.Payroll.save": "Save",
   "boilerplate.containers.Payroll.close": "Close",
@@ -935,6 +936,10 @@
   "boilerplate.containers.Payroll.deleteMessage":"Are You Sure You Want To Delete",  
   "boilerplate.containers.Payroll.confirmation": "Confirmation Message",  
   "boilerplate.containers.Payroll.applynewshift": "Apply new shift",
+  
+  "boilerplate.containers.Payroll.employees": "View Employees",
+  
+  "boilerplate.containers.Payroll.VacationName": "Vacation",
 
   "boilerplate.containers.Payroll.Setting.parentName": "Parent Menu",
   "boilerplate.containers.Payroll.Setting.menuName": "Menu Name",
@@ -1084,13 +1089,178 @@
   "boilerplate.containers.Payroll.Attendance.shiftName":"Shift Name",  
   "boilerplate.containers.Payroll.Attendance.EmployeeShiftCreateTitle":"Add Employee Shift",
   "boilerplate.containers.Payroll.Attendance.EmployeeShiftUpdateTitle":"Update Employee Shift",
+
   
+  "boilerplate.containers.Payroll.Attendance.AbsenceRules":"Absence ",
+  "boilerplate.containers.Payroll.Attendance.DelayRules":"Delay ",
+  "boilerplate.containers.Payroll.Attendance.TimeDelayRules":"Time Delay Rules",
+  "boilerplate.containers.Payroll.Attendance.OtherRules":"Other Rules",
+  "boilerplate.containers.Payroll.Attendance.OverTiemRules":"OverTiem Rules",
+  "boilerplate.containers.Payroll.Attendance.MaxOverTiemRules":"Max OverTiem Rules",
+  "boilerplate.containers.Payroll.Attendance.VacationsRules":"Vacations Rules",
+  "boilerplate.containers.Payroll.Attendance.workhoursRules":"work Hours Rules",  
+  "boilerplate.containers.Payroll.Attendance.AttRulesCreateTitle":"Add Attendance Rules",
+  "boilerplate.containers.Payroll.Attendance.AttRulesUpdateTitle":"Update Attendance Rules",
+
+  
+  "boilerplate.containers.Payroll.Attendance.ChoiceOne":"First Choice",
+  "boilerplate.containers.Payroll.Attendance.ChoiceTwo":"Second Choice",
+  "boilerplate.containers.Payroll.Attendance.ChoiceThree":"Third Choice",
+  "boilerplate.containers.Payroll.Attendance.ChoiceFour":"Fourth Choice",
+
+  
+  "boilerplate.containers.Payroll.Attendance.DayOne":"First Day",
+  "boilerplate.containers.Payroll.Attendance.DayTwo":"Second Day",
+  "boilerplate.containers.Payroll.Attendance.DayThree":"Third Day",
+  "boilerplate.containers.Payroll.Attendance.DayFour":"Fourth Day",  
+  "boilerplate.containers.Payroll.Attendance.Day5":"Fifth Day",
+
+  
+  
+  "boilerplate.containers.Payroll.Attendance.ConAbsenceAsOneDay":"Absence calc by fact,not by day(Continues Absence Calc as One)",  
+  "boilerplate.containers.Payroll.Attendance.Absence3more":"Continues Absence delete WeekEnd Days",
+  "boilerplate.containers.Payroll.Attendance.Firstelement":"First Element",
+  "boilerplate.containers.Payroll.Attendance.Secondelement":"Second Element", 
+  
+  
+  "boilerplate.containers.Payroll.Attendance.perDelayFirstElem":"Delay times element",  
+  "boilerplate.containers.Payroll.Attendance.allowedPerCount":"The number of times allowed without penalty",
+  "boilerplate.containers.Payroll.Attendance.lateafterAllowed":"Calculate delay time after allowed time",  
+  "boilerplate.containers.Payroll.Attendance.lateinWeekEndMiss":"Calculate delay at WeekEnd if there is Permission",  
+  "boilerplate.containers.Payroll.Attendance.allowedNoOfDelay":"Values ​​for deducting delay times after the allowed number",  
+  "boilerplate.containers.Payroll.Attendance.perDelaySecondElem":"Complete Time element",
+  "boilerplate.containers.Payroll.Attendance.lessTimestartFromMin":"day complete time calculated from minute",
+  "boilerplate.containers.Payroll.Attendance.minusMinuteFrom":"Month complete time calculated from minute",
+  "boilerplate.containers.Payroll.Attendance.TimeOne":"First Time",
+  "boilerplate.containers.Payroll.Attendance.TimeTwo":"Secind Time",
+  "boilerplate.containers.Payroll.Attendance.TimeThree":"Third Time",
+  "boilerplate.containers.Payroll.Attendance.TimeFour":"Fourth Time", 
+  "boilerplate.containers.Payroll.Attendance.TimeFive":"Fifth Time",
+  "boilerplate.containers.Payroll.Attendance.MotamemElement":"The value of the complete element corresponding to today",  
+  "boilerplate.containers.Payroll.Attendance.MotamemCalcScenario":"Complete Time Calculation Scenario",
+  "boilerplate.containers.Payroll.Attendance.calclateTimeWithCount":"Deduct Delay Time",  
+  "boilerplate.containers.Payroll.Attendance.calcLessTimeOnWeekEnd":"Calculate Complete Time at WeekEnd", 
+  "boilerplate.containers.Payroll.Attendance.calcLessTimeOnHoliday":"Calculate Complete Time at Holidays", 
+  "boilerplate.containers.Payroll.Attendance.timesSetting":"Time setting",
+  "boilerplate.containers.Payroll.Attendance.perRoll2":"Calculate each permission separately",
+  "boilerplate.containers.Payroll.Attendance.perRoll1":"Calculate all permissions monthly",
+  "boilerplate.containers.Payroll.Attendance.lateTimeEle":"Delay penalty element",
+  "boilerplate.containers.Payroll.Attendance.lateTimeMinusEl":"Delay time element",
+  "boilerplate.containers.Payroll.Attendance.lateTimeMinusElVal":"corresponding element value",
+  
+  "boilerplate.containers.Payroll.Attendance.calcLateByTime":"Calculate Late By Time",
+  "boilerplate.containers.Payroll.Attendance.lessAsLate":"Complete treated as Delay",
+  "boilerplate.containers.Payroll.Attendance.lateTimeOnMonth":"Calculate Late on Total Month",
+  "boilerplate.containers.Payroll.Attendance.perCompensated":"Permession remove late&early departure from attendance",
+
+  
+  "boilerplate.containers.Payroll.Attendance.maxLatePerMinutes":"Total allowed per month/minute",
+  "boilerplate.containers.Payroll.Attendance.maxLatePerNo":"Maximum number of permissions",
+  "boilerplate.containers.Payroll.Attendance.maxPerRoll1":"Maximum per Permession",
+
+  "boilerplate.containers.Payroll.Attendance.lateAfterMinOver":"Minimum night stay",
+  "boilerplate.containers.Payroll.Attendance.lateAfterOver":"Allow Employee to delay at next night day with maximum minutes",
+
+  
+  
+  "boilerplate.containers.Payroll.Attendance.fromMin": "fromMin",  
+  "boilerplate.containers.Payroll.Attendance.toMin": "toMin",  
+  "boilerplate.containers.Payroll.Attendance.factor": "factor",  
+  "boilerplate.containers.Payroll.Attendance.discTime": "discTime",  
+  "boilerplate.containers.Payroll.Attendance.discValue": "discValue",  
+  "boilerplate.containers.Payroll.Attendance.discPer": "discPer",  
+  "boilerplate.containers.Payroll.Attendance.doneOnce": "doneOnce",  
+  "boilerplate.containers.Payroll.Attendance.discPervalue": "decuction Value",  
+  "boilerplate.containers.Payroll.Attendance.frstTime": "first",  
+  "boilerplate.containers.Payroll.Attendance.secondTime": "second",  
+  "boilerplate.containers.Payroll.Attendance.thirdTime": "third",
+  "boilerplate.containers.Payroll.Attendance.fourthTime": "fourth",  
+  "boilerplate.containers.Payroll.Attendance.lateparam": "Late Setting",
+
+  
+  "boilerplate.containers.Payroll.Attendance.PenaltyElem": "Penalty for not logging in or out",  
+  "boilerplate.containers.Payroll.Attendance.AllowForForgetAtt": "Times allowed without penalty",  
+  "boilerplate.containers.Payroll.Attendance.PenaltyDayVal": "Penalty for not logging in for the first time",  
+  "boilerplate.containers.Payroll.Attendance.PenaltyDayValOut": "Penalty for not logging out for the first time",
+  "boilerplate.containers.Payroll.Attendance.MissionTime":"Update the arrival and departure time with the errand time",
+  
+  "boilerplate.containers.Payroll.Attendance.TrnsportaionEle": "Transportation allowance",
+  "boilerplate.containers.Payroll.Attendance.BranchTransportaionEl": "Branch Transportation allowance",
+  "boilerplate.containers.Payroll.Attendance.StoppageElem": "Stop Element",
+  "boilerplate.containers.Payroll.Attendance.DeletionElem": "Delete Element",  
+  "boilerplate.containers.Payroll.Attendance.StoppageDayVal": "Element Day Value",  
+  "boilerplate.containers.Payroll.Attendance.Overtimeparam": "Overtime Setting",  
+  "boilerplate.containers.Payroll.Attendance.Vacparam": "Vacation Setting on Web",
+  
+  "boilerplate.containers.Payroll.Attendance.InFromDate": "apply the same day",
+  "boilerplate.containers.Payroll.Attendance.AfterFromDate": "apply after date",
+  "boilerplate.containers.Payroll.Attendance.AfterDaysNo": "Max day",
+  "boilerplate.containers.Payroll.Attendance.BeforeD": "before day",
+
+  "boilerplate.containers.Payroll.Attendance.salaryOnWorkD": "Salary calculation based on working days",
+  "boilerplate.containers.Payroll.Attendance.hoursPerDay": "Work hours required per day",
+  "boilerplate.containers.Payroll.Attendance.monthDays": "Work hours required per Month",
+  "boilerplate.containers.Payroll.Attendance.updateInAfter": "Attendance rounded up to the next hour if the delay is more than... a minute.",
+  "boilerplate.containers.Payroll.Attendance.updateOutBefore": "Leave rounded up to the Previous hour if the exist is less than... a minute.",
+  "boilerplate.containers.Payroll.Attendance.overTimeElem": "usual Overtime Element",  
+  "boilerplate.containers.Payroll.Attendance.usualOverTimeH": "usual morning day",
+  "boilerplate.containers.Payroll.Attendance.usualOverTimeHNight": "usual night day",  
+  "boilerplate.containers.Payroll.Attendance.shiftvacOverTimeEl": "Overtime  Element in weekend",
+  "boilerplate.containers.Payroll.Attendance.shiftVacOverTimeH": "Overtime  Element in Shift Vacation",  
+  "boilerplate.containers.Payroll.Attendance.vacOverTimeEl": "Overtime  Element in Vacations",
+  "boilerplate.containers.Payroll.Attendance.vacOverTimeH": "Overtime in Vacations",  
+  "boilerplate.containers.Payroll.Attendance.worKNighElem": "Night Element" ,
+  "boilerplate.containers.Payroll.Attendance.worKNighDayVal": "Day Element value" ,
+  "boilerplate.containers.Payroll.Attendance.overtimestartFromMin": "Overtime Start from minute" ,
+
+  
+  "boilerplate.containers.Payroll.Attendance.morOverTime":"Calculating overtime in the morning",
+  "boilerplate.containers.Payroll.Attendance.shift24": "Calculating rest allowance for working shift of 10 hours(24 minutes)" ,  
+  "boilerplate.containers.Payroll.Attendance.init_RepVacBalance_EveryMonth": "Transferring rest allowance to Overtime",  
+  "boilerplate.containers.Payroll.Attendance.overTimeOnShift": "Overtime is calculated based on the work shift",
+  "boilerplate.containers.Payroll.Attendance.overTimeApprov":"The Overtime must be approved to be counted in the salary",
+  "boilerplate.containers.Payroll.Attendance.maxOvertimeHrsShiftVacDay":"Overtime on the shift Vacation (hours)",  
+  "boilerplate.containers.Payroll.Attendance.maxOvertimeHrsOrdinaryDay":"Overtime on the ordinary day(hours)",
+  "boilerplate.containers.Payroll.Attendance.maxOvertimeHrsPerMonth":"Overtime on Month(hours)",
+  "boilerplate.containers.Payroll.Attendance.calcShiftOverTAsDay":"It is calculated as a full day - the maximum is calculated",  
+  "boilerplate.containers.Payroll.Attendance.maxOvertimeHrsOfficialVacDay":"Overtime on the Vacation (hours)",
+  "boilerplate.containers.Payroll.Attendance.calcOfficialOverTAsDay":"It is calculated as a full day - the maximum is calculated",
+  "boilerplate.containers.Payroll.Attendance.overTimeApprDown":"Approximate the Overtime to at least half an hour",
+  "boilerplate.containers.Payroll.Attendance.overTimeAppr":"Approximate the Overtime to nearest an hour",
+  "boilerplate.containers.Payroll.Attendance.overTimeApprLabel":"If choose the Overtime rounding feature, the calculation is done as follows:",
+  "boilerplate.containers.Payroll.Attendance.overTimeApprLabel2":"1- If the it is less than 30 minutes, it does not count.",
+  "boilerplate.containers.Payroll.Attendance.overTimeApprLabel3":"2- If it equals 30 minutes, calculates as 30 minutes",
+  "boilerplate.containers.Payroll.Attendance.overTimeApprLabel4":"3- If it greater than 30 minutes, calculates as 60 minutes",
+  
+  "boilerplate.containers.Payroll.Attendance.ovTiFromOut":"Calculating Overtime&supplementary compared to time of departure",
+  "boilerplate.containers.Payroll.Attendance.ovTiFromOutLabel":"If choose this feature, Overtime and complementary are calculated by comparing the employee’s departure time with the end time of the shift, and the difference is calculated as Overtime or supplementary. This feature not be chosen if the shift hours are variable according to each employee.",
+  "boilerplate.containers.Payroll.Attendance.vacPenEle":"Vacuation Element",
+  "boilerplate.containers.Payroll.Attendance.vacPen":"Value/Time",  
+  "boilerplate.containers.Payroll.Attendance.vacBalanceFromMonth":"Vacations Allowed after",
+  "boilerplate.containers.Payroll.Attendance.annualBal":"Annual Vacation Balance",  
+  "boilerplate.containers.Payroll.Attendance.trainingPeriodHasBalance":"Calculated as Vacation Balance",
+  "boilerplate.containers.Payroll.Attendance.excludeVacDays":"The number of vacation days does not include the weekend",
+  "boilerplate.containers.Payroll.Attendance.vacBalaMonthly":"balance of Vacations depends on the actual months of work",
+  "boilerplate.containers.Payroll.Attendance.weekendSalary":"Weekends are counted as a working day",  
+  "boilerplate.containers.Payroll.Attendance.vac_before_SD":"before shift vacation/day",
+  "boilerplate.containers.Payroll.Attendance.vac_before_OV":"before vacation/day",
+
+   
+  "boilerplate.containers.Payroll.Attendance.vac_after_SD":"after shift vacation/day",
+  "boilerplate.containers.Payroll.Attendance.vac_after_OV":"after vacation/day",
+  
+  "boilerplate.containers.Payroll.Attendance.calcVacAuto":"Vacation Calulation depend on work days",
+  
+  "boilerplate.containers.Payroll.Attendance.workDays":"Work Days",
+  
+  "boilerplate.containers.Payroll.Attendance.vacEquiv":"Vacation equivalent",
+
+
   "boilerplate.containers.Payroll.Workflow.documentName": "Document Name",
   "boilerplate.containers.Payroll.Workflow.step": "Step",
   "boilerplate.containers.Payroll.Workflow.nextStep": "Next Step",
   "boilerplate.containers.Payroll.Workflow.approval": "Approval",
-  "boilerplate.containers.Payroll.Workflow.actionType": "Action",
-  
+  "boilerplate.containers.Payroll.Workflow.actionType": "Action",  
   "boilerplate.containers.Payroll.Workflow.workFlowCreateTitle": "Add WorkFlow",
   "boilerplate.containers.Payroll.Workflow.workFlowUpdateTitle": "Upate WorkFlow",
   
