finish `Form2Insurance` page

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1506,7 +1506,10 @@
   "boilerplate.containers.Payroll.insurance.hiringDate": "Hiring Date",
   "boilerplate.containers.Payroll.insurance.toDate": "To Date",
   "boilerplate.containers.Payroll.insurance.job": "Job",
+  "boilerplate.containers.Payroll.insurance.orderBy": "Order By",
   "boilerplate.containers.Payroll.insurance.gender": "Gender",
+  "boilerplate.containers.Payroll.insurance.totalFixed": "Total Fixed",
+  "boilerplate.containers.Payroll.insurance.totalVariable": "Total Variable",
   "boilerplate.containers.Payroll.insurance.birthDate": "Birth Date",
   "boilerplate.containers.Payroll.insurance.notes": "Notes",
   "boilerplate.containers.Payroll.insurance.BranchName": "Branch Name",
