finish DetailedReportAbsences page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1313,6 +1313,7 @@
     "boilerplate.containers.Payroll.Attendance.employeeName":"اسم الموظف",
     "boilerplate.containers.Payroll.Attendance.missionDays":"ايام المأمورية",
     "boilerplate.containers.Payroll.Attendance.weekend":"الاجازه الاسبوعية",
+    "boilerplate.containers.Payroll.Attendance.absence":"الغياب",
   
   
   
