--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1102,6 +1102,7 @@
   "boilerplate.containers.Payroll.Attendance.employeeName":"Employee Name",
   "boilerplate.containers.Payroll.Attendance.missionDays":"Mission Days",
   "boilerplate.containers.Payroll.Attendance.weekend":"Weekend",
+  "boilerplate.containers.Payroll.Attendance.absence":"Absence",
   
   "boilerplate.containers.Payroll.Attendance.AbsenceRules":"Absence ",
   "boilerplate.containers.Payroll.Attendance.DelayRules":"Delay ",
