--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1316,6 +1316,15 @@
     "boilerplate.containers.Payroll.Attendance.absence":"الغياب",
     "boilerplate.containers.Payroll.Attendance.shift":"الوردية",
     "boilerplate.containers.Payroll.Attendance.includingEmployeesWithoutAttendanceRule":"يشمل الموظفين الذين لا تنطبق عليهم القواعد",
+
+    "boilerplate.containers.Payroll.Attendance.AttendanceDate":"تاريخ الحضور",
+    "boilerplate.containers.Payroll.Attendance.overTime":"الوقت الاضافى - ق",
+    "boilerplate.containers.Payroll.Attendance.leave":"اجازة",
+    "boilerplate.containers.Payroll.Attendance.modifiedOvertime":"الوقت الاضافى المعدل",
+    "boilerplate.containers.Payroll.Attendance.All":"الكل",
+    "boilerplate.containers.Payroll.Attendance.LeavesAndWeekendOnly":"العطلات فقط",
+    "boilerplate.containers.Payroll.Attendance.workDevsOnly":"ايام العمل فقط",
+    "boilerplate.containers.Payroll.Attendance.UpdatedOnly":"المعدل فقط",
   
   
   
