create `StopMedicalInsurance page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1753,6 +1753,10 @@
   "boilerplate.containers.Payroll.medicalInsurance.medicalCenterName": "اسم المركز الطبي",
   "boilerplate.containers.Payroll.medicalInsurance.medicalCenterId": "كود المركز الطبي",
   "boilerplate.containers.Payroll.medicalInsurance.serial": "مسلسل",
+  "boilerplate.containers.Payroll.medicalInsurance.reason": "السبب",
+  "boilerplate.containers.Payroll.medicalInsurance.insertDate": "تاريخ التسجيل",
+  "boilerplate.containers.Payroll.medicalInsurance.addedBy": "التسجيل بواسطة",
+  "boilerplate.containers.Payroll.medicalInsurance.endDate": "تاريخ الانتهاء",
   "boilerplate.containers.Payroll.medicalInsurance.employeeShare": "نصيب الموظف",
   "boilerplate.containers.Payroll.medicalInsurance.companyShare": "نصيب الشركة",
   "boilerplate.containers.Payroll.medicalInsurance.fromDate": "من تاريخ",
