--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1696,7 +1696,11 @@
   "boilerplate.containers.Payroll.medicalInsurance.insuranceCategory": "Insurance Category",
   "boilerplate.containers.Payroll.medicalInsurance.insuranceCompany": "Insurance Company",
   "boilerplate.containers.Payroll.medicalInsurance.hrNotes": "HR Notes",
+  "boilerplate.containers.Payroll.medicalInsurance.endDate": "End Date",
   "boilerplate.containers.Payroll.medicalInsurance.familyCount": "Family Count",
+  "boilerplate.containers.Payroll.medicalInsurance.reason": "Reason",
+  "boilerplate.containers.Payroll.medicalInsurance.insertDate": "Insert Date",
+  "boilerplate.containers.Payroll.medicalInsurance.addedBy": "Added By",
   "boilerplate.containers.Payroll.medicalInsurance.medicalEndDate": "Medical End Date",
   "boilerplate.containers.Payroll.medicalInsurance.medicalCardNumber": "Medical Card Number",
   "boilerplate.containers.Payroll.medicalInsurance.cardExpireDate": "Card Expire Date",
