--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1270,6 +1270,15 @@
   "boilerplate.containers.Payroll.Attendance.workDays": "Work Days",
 
   "boilerplate.containers.Payroll.Attendance.vacEquiv": "Vacation equivalent",
+  
+  "boilerplate.containers.Payroll.Attendance.ip":"Ip",
+  "boilerplate.containers.Payroll.Attendance.port":"Port",
+  "boilerplate.containers.Payroll.Attendance.serialNumber":"Serial Number",
+  "boilerplate.containers.Payroll.transportaion.ip":"Transportaion",
+  
+  "boilerplate.containers.Payroll.transportaion.DeviceUpdateTitle":"Update Device",
+  "boilerplate.containers.Payroll.transportaion.DeviceCreateTitle":"Add Device",
+  "boilerplate.containers.Payroll.transportaion.devicePass":"Device Password",
 
   "boilerplate.containers.Payroll.Workflow.documentName": "Document Name",
   "boilerplate.containers.Payroll.Workflow.step": "Step",
