--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1117,6 +1117,9 @@
   "boilerplate.containers.Payroll.Attendance.attendanceRule":"Including employees without attendance rule",
 
   "boilerplate.containers.Payroll.Attendance.earlyAttMinutes":"Early Attendance Miuntes",
+
+  "boilerplate.containers.Payroll.Attendance.outTime":"Out Time",
+  "boilerplate.containers.Payroll.Attendance.earlyLeaveMin":"Early Leave Min",
   
   "boilerplate.containers.Payroll.Attendance.AbsenceRules":"Absence ",
   "boilerplate.containers.Payroll.Attendance.DelayRules":"Delay ",
