--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1327,6 +1327,8 @@
 
     "boilerplate.containers.Payroll.Attendance.outTime":"وقت الانصراف",
     "boilerplate.containers.Payroll.Attendance.earlyLeaveMin":"دقائق الانصراف المبكر",
+
+    "boilerplate.containers.Payroll.Attendance.permission":"اذن",
   
   
   
