create `ReviewOvertime` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1065,7 +1065,11 @@
   "boilerplate.containers.Payroll.Attendance.permissionName": "نوع الاذن",
   "boilerplate.containers.Payroll.Attendance.PermissionTrxCreateTitle": "اضافة اذن",
   "boilerplate.containers.Payroll.Attendance.PermissionTrxUpdateTitle": "تعديل اذن",
+  "boilerplate.containers.Payroll.Attendance.showWeekendOnly": "أجازات الورديات فقط",
   "boilerplate.containers.Payroll.Attendance.minutesCount": "عدد الدقائق",
+  "boilerplate.containers.Payroll.Attendance.requestSerial": "طلب المسلسل",
+  "boilerplate.containers.Payroll.Attendance.accruedLeave": "يحتسب بدل الراحة",
+  "boilerplate.containers.Payroll.Attendance.accruedLeaveMin": "بدل الراحة المعدل",
   "boilerplate.containers.Payroll.Attendance.totalNumberOfMinutes": "إجمالي عدد الدقائق",
   "boilerplate.containers.Payroll.Attendance.subscriptionDate": "تاريخ التسجيل",
   "boilerplate.containers.Payroll.Attendance.startTime": "من الساعه",
