--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1044,7 +1044,11 @@
   "boilerplate.containers.Payroll.Attendance.permissionName": "Permission Type",
   "boilerplate.containers.Payroll.Attendance.PermissionTrxCreateTitle": "Add Permission",
   "boilerplate.containers.Payroll.Attendance.PermissionTrxUpdateTitle": "Update Permission",
+  "boilerplate.containers.Payroll.Attendance.showWeekendOnly": "Show Weekend Only",
   "boilerplate.containers.Payroll.Attendance.minutesCount": "Minutes",
+  "boilerplate.containers.Payroll.Attendance.requestSerial": "Request Serial",
+  "boilerplate.containers.Payroll.Attendance.accruedLeave": "Accrued Leave",
+  "boilerplate.containers.Payroll.Attendance.accruedLeaveMin": "Accrued Leave Min",
   "boilerplate.containers.Payroll.Attendance.totalNumberOfMinutes": "Total Number Of Minutes",
   "boilerplate.containers.Payroll.Attendance.subscriptionDate": "Subscription Time",
   "boilerplate.containers.Payroll.Attendance.startTime": "Start Time",
