--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -795,6 +795,7 @@
   "boilerplate.containers.Ecommerce.Checkout.invoice_title": "Editable Invoice",
   "boilerplate.containers.Ecommerce.Checkout.invoice_desc": "An Editable/Printable HTML Invoice",
   "boilerplate.components.tables.codes.code": "Code",
+  "boilerplate.components.tables.codes.requirements": "Requirements",
   "boilerplate.components.tables.codes.name": "Arabic Name",
   "boilerplate.components.tables.codes.enname": "English Name",
   "boilerplate.components.tables.codes.govname": "Governorate",
@@ -1761,5 +1762,17 @@
   "boilerplate.containers.Payroll.medicalInsurance.InsuranceCompany": "Insurance Company",
   "boilerplate.containers.Payroll.medicalInsurance.medicalInsuranceCategory": "Medical Insurance Category",
   "boilerplate.containers.Payroll.medicalInsurance.privlMedCareNumber": "Priv.Medi.Care Number",
-  "boilerplate.containers.Payroll.medicalInsurance.All": "All"
+  "boilerplate.containers.Payroll.medicalInsurance.All": "All",
+
+  "boilerplate.containers.Payroll.recruitment.jobName": "Job Name",
+  "boilerplate.containers.Payroll.recruitment.jobCode": "Job Code",
+  "boilerplate.containers.Payroll.recruitment.experience": "Experience",
+  "boilerplate.containers.Payroll.recruitment.department": "Department",
+  "boilerplate.containers.Payroll.recruitment.organization": "Organization",
+  "boilerplate.containers.Payroll.recruitment.branch": "Branch",
+  "boilerplate.containers.Payroll.recruitment.division": "Division",
+  "boilerplate.containers.Payroll.recruitment.enterDetailsData": "Enter Details Data",
+  "boilerplate.containers.Payroll.recruitment.description": "Description",
+  "boilerplate.containers.Payroll.recruitment.section": "Section",
+  "boilerplate.containers.Payroll.recruitment.expireDate": "Expire Date"
 }
