--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1143,6 +1143,9 @@
   "boilerplate.containers.Payroll.Attendance.fromDateErrorMes":"Must to choose From Date",
   "boilerplate.containers.Payroll.Attendance.currentAttendance":"Current Attendance",
   "boilerplate.containers.Payroll.Attendance.diff":"Diff",
+
+  "boilerplate.containers.Payroll.Attendance.dateWithPeriodErrorMes":"Must to choose From Date And To Date , The date must not exceed 30 days",
+  "boilerplate.containers.Payroll.Attendance.showVacationName":"Show vacation name",
   
   "boilerplate.containers.Payroll.Attendance.AbsenceRules":"Absence ",
   "boilerplate.containers.Payroll.Attendance.DelayRules":"Delay ",
