--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1146,6 +1146,11 @@
 
   "boilerplate.containers.Payroll.Attendance.dateWithPeriodErrorMes":"Must to choose From Date And To Date , The date must not exceed 30 days",
   "boilerplate.containers.Payroll.Attendance.showVacationName":"Show vacation name",
+
+  "boilerplate.containers.Payroll.Attendance.device":"Device",
+  "boilerplate.containers.Payroll.Attendance.recordCount":"Record Count",
+  "boilerplate.containers.Payroll.Attendance.MinDate":"Min Date",
+  "boilerplate.containers.Payroll.Attendance.MaxDate":"Max Date",
   
   "boilerplate.containers.Payroll.Attendance.AbsenceRules":"Absence ",
   "boilerplate.containers.Payroll.Attendance.DelayRules":"Delay ",
